Packaging is working.

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,6 @@ There should be a weather forecast here:<br/>
 
 </body>
 
-<script src="/js/vendor.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js_dist/vendor.js"></script>
+<script src="/js_dist/app.js"></script>
 </html>
